# libhid

./: .cvsignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.debian  Makefile.in  README  README.md  TODO  autogen.sh  configure.ac  doc.c  dupload.conf
debian/: changelog  control  copyright  libhid0.install  python-hid.examples  rules
doc/: .cvsignore  Makefile.am  doxygen.rc.in  frontpage.dox
doc/man/: .cvsignore  Makefile  Makefile.am  Makefile.in  libhid-detach-device.1  libhid-detach-device.dbk
doc/www/: Makefile.am  index.html  libhid.css
hidparser/: Makefile.am  extract_report_descriptor.py  hidparser.c  hidparser.h  hidparser.txt  hidtypes.h
include/: assert.h  compiler.h  constants.h  debug.h  hid.h  hid_helpers.h  macros.h  os.h  usb.h
m4/: ax_swig_python.m4  md_check_arg_compiler_helper.m4  md_check_doxygen.m4  md_check_gcc3.m4  md_check_lib_file.m4  md_check_libusb018b.m4  md_check_os.m4  md_check_swig.m4  md_conf_ccache.m4  md_conf_db2man.m4  md_conf_debugging.m4  md_conf_distcc.m4  md_conf_flags.m4  md_conf_pythonwrapper.m4  md_lt_version.m4  md_version.m4  swig-override.m4
misc/: libusb-0.1.7_to_HEAD_2003.01.23.0059.patch  libusb-detach-driver.patch
pkgconfig/: .cvsignore  libhid.pc.in
ref/lsusb-vvv/: Apple_17_inch_Studio_Display  Apple_Cinema_HD_Display  MGE_Pulsar_Evolution_500  Tripp_Lite_OMNIVS1000  Tripp_Lite_SMART1500RM2U  Zonet_KVM3024
ref/test_libhid_output/: Apple_17_inch_Studio_Display  Apple_Cinema_HD_Display  MGE_Pulsar_Evolution_500  metrologic_scanner
rpm/: libhid-0.2.10-am_config_header.patch  libhid-0.2.10-doc_makefile_am.patch  libhid-0.2.10-docbook_xsl_location-redhat.patch  libhid-0.2.10-m4_doxygen.patch  libhid-0.2.10-src_makefile_am.patch  libhid.spec  libhid.spec.in
src/: .cvsignore  Makefile.am  bsd.c  config.c.in  darwin.c  debug.c  hid.c  hid_exchange.c  hid_initialisation.c  hid_opening.c  hid_parsing.c  hid_preparation.c  hid_presentation.c  libhid-config.c  libhid-detach-device.c  linux.c
swig/: .cvsignore  Makefile  Makefile.am  README  file_py3.i  hid.i  hid_ctypes.py  hid_swig_helpers.c  hid_swig_helpers.h  hidwrap.py  test_hidwrap.py  test_libhid.py  test_libhid.py.in
test/: .cvsignore  Makefile.am  lshid.c  test_libhid.c  test_libhid.py  tripplite.c
